--- a/bi.html
+++ b/bi.html
@@ -33,7 +33,7 @@
 <h1>
 <img src="https://www.gifss.com/economia/terminal-pago/images/pago-tarjeta.gif" width="180" height="180" align="right"/>
 <font color="#70d1fa">Herramientas de Inteligencia de Negocios (BI) y Sistemas de Apoyo a la toma de decisiones</font>
-</h1><button onclick="window.location.href='intex.html'">Uso de sistemas para la gestión</button>
+</h1><button onclick="window.location.href='index.html'">Uso de sistemas para la gestión</button>
 
 <p>creado por Saul Alberto Gaxiola Jimenez y Maria Guadalupe Torres Mendoza.</p>
 </center>
