--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="epr.html" class="button">Sistemas integrados de gestion (ERP)</a>
         <a href="crm.html" class="button">Sistemas de Información de Mercadeo y Aplicaciones CRM</a>
         <a href="bi.html" class="button">Herramientas de Inteligencia de Negocios (BI) y Sistemas de Apoyo a la toma de decisiones</a>
-        <a href="dataminig.html" class="button">Herramientas de datamining</a>
+        <a href="datamining.html" class="button">Herramientas de datamining</a>
     </div>
 
     <div class="city">
