--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <img src="https://lh5.googleusercontent.com/ffy6JN5z7oku8tdW2tpv8iwy0aIxV4W1AO7dGV8PKYxrmHWPSlWIq3pSuHrUEMYCDemZocGY9o1KdiKkng060ZYNhU9574IwtkMg71Vz8hCAKjOC0aZIfU3kUIO0CMAE4zeEcAPTv_stzKSxgJOpUfk" width="500" height="300">
 </center>
     <div class="container">
-        <a href="epr.html" class="button">Sistemas integrados de gestion (ERP)</a>
+        <a href="erp.html" class="button">Sistemas integrados de gestion (ERP)</a>
         <a href="crm.html" class="button">Sistemas de Información de Mercadeo y Aplicaciones CRM</a>
         <a href="bi.html" class="button">Herramientas de Inteligencia de Negocios (BI) y Sistemas de Apoyo a la toma de decisiones</a>
         <a href="datamining.html" class="button">Herramientas de datamining</a>
